--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>OOP and TS - Midterm</title>
   <link rel="stylesheet" href="./css/style.css">
+  <!-- Browser Icon -->
+  <link rel="icon" type="image/x-icon" href="./assets/flower_logo.png">
   <!-- Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,7 +14,6 @@
 </head>
 <body>
   <div id="app"></div>
-
   <script src="./main.js" type="module"></script>
 </body>
 </html>
